compiler/testData/diagnostics/tests/suppress/oneWarning/onProperty.kt
// FIR_IDENTICAL
class C {
    @Suppress("REDUNDANT_NULLABLE")
    val foo: String?? = null <!USELESS_CAST!>as Nothing?<!>
}